--- a/sass/settings.sass
+++ b/sass/settings.sass
@@ -104,6 +104,10 @@ img
     &.primary-blue
         background-color: $blue-primary
         letter-spacing: .02em
+        &.hover-change
+            &:hover
+                border: 1px solid $blue-primary
+                color: $blue-primary
         img
             margin-left: 6px
     &.medium-blue
