--- a/sass/main.sass
+++ b/sass/main.sass
@@ -97,7 +97,21 @@ header
 			font-weight: 500
 			font-size: 30px
 			line-height: 34px
+	>.container
+		position: relative
+		z-index: 50
+	&.common
+		.text-section
+			max-width: 520px
+			.middle-main-title
+				margin-bottom: 28px
+		.media-section
+			&.image img
+				max-width: 580px
+		.wrapper-content
+			margin-bottom: 40px
 	.text-section
+		width: 100%
 		max-width: 380px
 
 	.smallest-title
@@ -124,6 +138,7 @@ header
 			min-height: 365px
 		&.image
 			img
+				width: 100%
 				max-width: 480px
 	.tiles-wrapper
 		position: relative
@@ -181,11 +196,62 @@ header
 		margin-bottom: 28px
 	.wrapper-content
 		z-index: 20
-		margin-bottom: 40px
 	.media-section
 		&.image
 			img
 				max-width: 650px
+
+.employers
+	background-color: #E9F7FD
+	&::after
+		top: 0
+		right: 0
+		width: 100%
+		height: 100%
+		z-index: 10
+		background-image: url('../img/employers-bg-banner.png')
+		background-position: top right
+		background-size: cover
+	.text-section
+		.middle-main-title
+			color: $blue-medium
+
+
+.main
+	&.more
+		padding: 180px 0
+		background-color: #FF99D8
+		&::after
+			background-image: url('../img/more-bg-image.png')
+			background-size: cover
+			width: 100%
+			height: 100%
+			top: 0
+			left: 0
+		.smallest-title,
+		.middle-main-title,
+		.description
+			color: #fff
+		.wrapper-content
+			align-items: center
+			margin-bottom: 0!important
+			.text-section
+				max-width: 470px
+		.middle-main-title
+			margin-bottom: 20px
+			max-width: 240px
+		.media-section
+			max-width: 100%
+			&.group-images
+				display: flex
+				flex-direction: column
+				img
+					border-radius: 10px
+					box-shadow: 0px 10px 15px -3px rgba(0, 0, 0, 0.05)
+					display: block
+					margin-bottom: 14px
+					&:last-of-type
+						margin-bottom: 0
 
 .top_mnu
 	display: none
@@ -343,9 +409,6 @@ header
 			width: 100%
 			height: 100%
 			background-size: cover
-	.form-wrapper
-		.img-form-mobile
-			display: none
 		.form
 			.form-body
 				.form-title
@@ -357,13 +420,39 @@ header
 				.list-benefits
 					li
 						.icon
-							width: 24px
+							path
+								stroke: $blue-medium
+	&.employers
+		&::after
+			background-image: url('../img/sign-up-employer-bg.jpg')
+		.form
+			.form-body
+				.form-title
+					color: $blue-primary
+			.text-block
+				.smallest-title,
+				.middle-main-title
+					color: $blue-primary
+				.middle-main-title
+					max-width: 250px
+				.list-benefits
+					li
+						.icon
+							path
+								stroke: $blue-primary
+	.form-wrapper
+		.img-form-mobile
+			display: none
+		.form
+			.text-block
+				.list-benefits
+					li
+						.icon
+							min-width: 24px
 							svg
 								width: 100%
 								height: 100%
-							path
-								stroke: $blue-medium
-
+						
 	.form-wrapper
 		position: relative
 		z-index: 150
@@ -383,7 +472,7 @@ header
 					li
 						display: flex
 						flex-direction: row
-						align-items: center
+						align-items: flex-start
 						margin-bottom: 8px
 						.icon
 							svg
@@ -406,6 +495,7 @@ header
 					letter-spacing: .02em
 					margin-top: 40px
 					margin-bottom: 16px
+
 
 
 footer
