--- a/css/main.css
+++ b/css/main.css
@@ -41,6 +41,12 @@ img {
   max-width: 100%;
   display: block; }
 
+.blue-primary-color {
+  color: #3E06DE; }
+
+.pink-color {
+  color: #ff009e; }
+
 .main-title {
   font-family: 'AvantGarde Bold', sans-serif;
   font-weight: 700;
@@ -248,6 +254,9 @@ header {
     line-height: 18px;
     color: #3E06DE; }
 
+.about-us-background {
+  background-color: #ECE6FC; }
+
 .main {
   padding: 220px 0 116px; }
   .main.home {
@@ -280,8 +289,11 @@ header {
     max-width: 520px; }
     .main.common .text-section .middle-main-title {
       margin-bottom: 28px; }
+    .main.common .text-section .description + .description {
+      margin-top: 16px; }
   .main.common .media-section.image img {
-    max-width: 580px; }
+    max-width: 580px;
+    border-radius: 10px; }
   .main.common .wrapper-content {
     margin-bottom: 40px; }
   .main .text-section {
@@ -349,6 +361,76 @@ header {
     display: flex;
     flex-direction: row;
     justify-content: space-between; }
+
+.team {
+  padding: 24px 0 160px; }
+  .team .middle-main-title {
+    margin-bottom: 48px; }
+  .team .teams-list {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between; }
+    .team .teams-list .item-list {
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+      width: 100%;
+      max-width: 320px;
+      margin-bottom: 30px; }
+      .team .teams-list .item-list img {
+        width: 210px;
+        margin-bottom: 20px;
+        box-shadow: 0px 4px 6px -1px rgba(0, 0, 0, 0.05);
+        border-radius: 10px;
+        overflow: hidden; }
+      .team .teams-list .item-list .title {
+        font-family: 'Avenir Bold', sans-serif;
+        font-weight: 700;
+        font-size: 30px;
+        line-height: 34px;
+        letter-spacing: 0.02em; }
+      .team .teams-list .item-list .subtitle {
+        font-family: "Avenir Medium", sans-serif;
+          font-family-font-weight: 500;
+        font-size: 16px;
+        line-height: 22px;
+        letter-spacing: .02em;
+        color: #0C012C; }
+      .team .teams-list .item-list .description {
+        font-family: "Avenir Regular", sans-serif;
+          font-family-font-weight: 400;
+        font-size: 14px;
+        line-height: 20px;
+        letter-spacing: 0.01em;
+        margin-top: 20px; }
+  .team .tile-wrapper {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    margin-top: 160px; }
+    .team .tile-wrapper .tile-body {
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between;
+      align-items: center;
+      width: 100%;
+      max-width: 880px;
+      background-color: #fff;
+      border-radius: 10px;
+      box-shadow: 0px 4px 6px -1px rgba(0, 0, 0, 0.05);
+      padding: 54px 52px; }
+      .team .tile-wrapper .tile-body .middle-main-title {
+        margin-bottom: 0; }
+      .team .tile-wrapper .tile-body .context-block {
+        margin-left: 30px;
+        max-width: 440px; }
+        .team .tile-wrapper .tile-body .context-block .description {
+          line-height: 24px;
+          font-family: "Avenir Medium", sans-serif;
+            font-family-font-weight: 500;
+          letter-spacing: 0.02em; }
+          .team .tile-wrapper .tile-body .context-block .description + .description {
+            margin-top: 16px; }
 
 .vendors {
   background-color: #ECE6FC;
@@ -992,7 +1074,7 @@ footer {
     .main.employers::after {
       background-image: url("../img/employers-bg-banner-xs.png");
       background-size: cover; }
-    .main.common .wrapper-content .buttons-wrapper {
+    .main.common .wrapper-content .text-section {
       margin-bottom: 56px; }
     .main.common .wrapper-content .media-section.image {
       display: block; }
@@ -1146,13 +1228,19 @@ footer {
     .main.common .wrapper-content .middle-main-title {
       max-width: 276px; }
     .main.common .wrapper-content .buttons-wrapper {
-      margin-bottom: 28px; }
+      margin-bottom: 0; }
+    .main.common .wrapper-content .text-section {
+      margin-bottom: 40px; }
     .main.more {
       padding: 100px 0 90px; }
       .main.more::after {
         background-image: url("../img/more-bg-image-xs.png");
         background-position: top left;
         background-size: contain; }
+    .main.about-us {
+      padding-top: 100px; }
+      .main.about-us .wrapper-content .media-section.image {
+        display: none; }
     .main .main-title {
       margin-bottom: 16px; }
     .main .media-section.video {
@@ -1294,8 +1382,8 @@ footer {
       margin-top: 30px; }
       .main .buttons-wrapper .button {
         margin-right: 0; }
-        .main .buttons-wrapper .button:first-of-type {
-          margin-bottom: 12px; }
+      .main .buttons-wrapper .button + .button {
+        margin-top: 12px; }
   .benefits .content-block {
     padding: 60px 0 80px; }
     .benefits .content-block .middle-main-title {
