--- a/sass/settings.sass
+++ b/sass/settings.sass
@@ -19,6 +19,12 @@ img
     max-width: 100%
     display: block
 
+.blue-primary-color
+    color: $blue-primary
+
+.pink-color
+    color: $pink-color
+
 .main-title
     font-family: 'AvantGarde Bold', sans-serif
     font-weight: 700
