--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -68,6 +68,19 @@
 				&.image
 					img
 						max-width: 480px
+
+	.team 
+		.teams-list
+			.item-list
+				align-items: center
+				max-width: 318px
+				.description
+					text-align: center
+		.middle-main-title
+			text-align: center
+			margin-bottom: 60px
+
+
 	.vendors
 		padding-bottom: 100px
 		.wrapper-content
@@ -246,6 +259,17 @@
 					.smallest-title
 						margin-top: 30px
 
+	// .team 
+	// 	.teams-list
+	// 		justify-content: space-between
+	// 		align-items: center
+	.team 
+		padding-bottom: 130px
+		.tile-wrapper 
+			margin-top: 100px
+			.tile-body 
+				.context-block
+					max-width: 376px
 
 	.benefits
 		.content-block
@@ -545,7 +569,29 @@
 				img
 					max-width: 100%
 					
-	
+	.team 
+		.middle-main-title
+			text-align: start
+		.teams-list
+			justify-content: flex-start
+			.item-list
+				align-items: flex-start
+				.description
+					text-align: left
+		.tile-wrapper
+			.tile-body
+				flex-direction: column
+				.middle-main-title
+					margin-bottom: 30px
+				.context-block 
+					margin-left: 0
+					max-width: 265px
+					.description
+						text-align: center
+						.next
+							display: block
+					.description + .description
+						margin-top: 20px
 
 	.sign-up-form
 		&.vendor
@@ -724,6 +770,21 @@
 					.middle-main-title
 						font-size: 34px
 						line-height: 40px
+
+	.team 
+		padding: 0 0 100px
+		.teams-list 
+			.item-list
+				max-width: 365px
+				.title
+					font-size: 24px
+					line-height: 28px
+				.subtitle
+					font-size: 16px
+					line-height: 22px
+		.tile-wrapper
+			margin-top: 20px
+
 
 	footer
 		padding: 26px 0 30px
