--- a/sass/main.sass
+++ b/sass/main.sass
@@ -191,14 +191,15 @@ header
 	.teams-list	
 		display: flex
 		flex-direction: row
-		justify-content: space-between
+		justify-content: space-around
+		flex-wrap: wrap
 		.item-list
 			display: flex
 			flex-direction: column
 			align-items: flex-start
 			width: 100%
 			max-width: 320px
-			margin-bottom: 30px
+			margin-bottom: 50px
 			img
 				width: 210px
 				margin-bottom: 20px
@@ -229,7 +230,7 @@ header
 		display: flex
 		flex-direction: row
 		justify-content: center
-		margin-top: 160px
+		margin-top: 120px
 		.tile-body
 			display: flex
 			flex-direction: row
