--- a/css/main.css
+++ b/css/main.css
@@ -1343,6 +1343,8 @@ footer {
       height: 240px; }
     .main .buttons-wrapper {
       margin-top: 30px; }
+  .img-snippet-mobile {
+    padding-top: 50px; }
   .benefits .content-block {
     padding: 70px 0 70px; }
     .benefits .content-block .middle-main-title {
