--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -22,6 +22,7 @@
 
 /* Large Devices, Wide Screens */
 @media only screen and (max-width : 1200px)
+	
 	/**/
 	//settings block for page
 	.standard-p-block
@@ -101,10 +102,6 @@
 		&.yellow
 			.tiles-wrapper
 				.tile
-					&:nth-child(2)
-						.tile-body
-							.smallest-title
-					//max-width: 246px
 					.tile-body
 						padding: 0 15px 35px
 
@@ -688,7 +685,6 @@
 				.text
 					font-size: 18px
 					line-height: 22px
-
 	header
 		padding: 12px 0
 		&.sticky-header
@@ -756,6 +752,8 @@
 		.buttons-wrapper
 			margin-top: 30px
 			
+	.img-snippet-mobile
+		padding-top: 50px
 
 	.benefits
 		.content-block
@@ -788,7 +786,6 @@
 				.tile-body
 					padding: 22px 30px
 					img
-						//position: relative
 						top: 0px
 						min-height: 120px
 						height: 120px
@@ -985,7 +982,6 @@
 							max-width: 200px
 							font-size: 14px
 						img
-							// top: 17px
 					&:nth-child(2)
 						.tile-body
 							.smallest-title
@@ -1065,8 +1061,7 @@
 					.form-title
 						margin-top: 0
 
-					//.middle-main-title
-
+	
 	/**/
 
 
