polish elements of pages

--- a/sass/main.sass
+++ b/sass/main.sass
@@ -219,7 +219,7 @@ header
 	.teams-list	
 		display: flex
 		flex-direction: row
-		justify-content: space-around
+		justify-content: space-between
 		flex-wrap: wrap
 		.item-list
 			display: flex
