--- a/css/main.css
+++ b/css/main.css
@@ -394,7 +394,7 @@ header {
   .team .teams-list {
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: space-between;
     flex-wrap: wrap; }
     .team .teams-list .item-list {
       display: flex;
@@ -823,11 +823,13 @@ footer {
     max-width: 50%; }
     .main.common .media-section.image img {
       max-width: 480px; }
-  .team .teams-list .item-list {
-    align-items: center;
-    max-width: 318px; }
-    .team .teams-list .item-list .description {
-      text-align: center; }
+  .team .teams-list {
+    justify-content: space-around; }
+    .team .teams-list .item-list {
+      align-items: center;
+      max-width: 318px; }
+      .team .teams-list .item-list .description {
+        text-align: center; }
   .team .middle-main-title {
     text-align: center;
     margin-bottom: 60px; }
