--- a/css/main.css
+++ b/css/main.css
@@ -296,6 +296,8 @@ header {
       font-weight: 500;
       font-size: 30px;
       line-height: 34px; }
+    .main.home .media-section.video iframe {
+      position: relative !important; }
   .main > .container {
     position: relative;
     z-index: 50; }
