--- a/sass/main.sass
+++ b/sass/main.sass
@@ -116,6 +116,10 @@ header
 			font-weight: 500
 			font-size: 30px
 			line-height: 34px
+		.media-section
+			&.video
+					iframe
+						position: relative!important
 	>.container
 		position: relative
 		z-index: 50
@@ -130,6 +134,7 @@ header
 			&.image img
 				max-width: 580px
 				border-radius: 10px
+			
 		.wrapper-content
 			margin-bottom: 40px
 	.text-section
